Update at-risk weekly prediction.ipynb

--- a/at-risk weekly prediction.ipynb
+++ b/at-risk weekly prediction.ipynb
@@ -1292,10 +1292,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#path='C:\\\\Users\\\\ELTE IK EFOP\\\\Desktop\\\\myresearch\\\\edm\\\\d13b\\\\demo_vle_assessments\\\\'\n",
-    "#path='C:\\\\Users\\\\ELTE IK EFOP\\\\Desktop\\\\myresearch\\\\edm\\\\d13b\\\\demo_vle_assessments\\\\'\n",
-    "path1='C:\\\\Users\\\\ELTE IK EFOP\\\\Desktop\\\\myresearch\\\\edm\\\\at-risk prediction\\\\weeks dafa\\\\approach1\\\\'\n",
-    "path2='C:\\\\Users\\\\ELTE IK EFOP\\\\Desktop\\\\myresearch\\\\edm\\\\at-risk prediction\\\\weeks dafa\\\\approach2\\\\'\n",
+
+    "path1='C:\\\\Users\\\\mooh\\\\Desktop\\\\research\\\\approach1\\\\'\n",
+    "path2='C:\\\\Users\\\\mooh\\\\Desktop\\\\research\\\\edm\\\\approach2\\\\'\n",
     "\n",
     "#for key in demo_vle_assessments_df.keys():\n",
     "for k in range(1,35):\n",
